testsuite/tests/typecheck/should_fail/T9739.stderr

T9739.hs:4:1: error:
    • Superclass cycle for ‘Class1’
        whose superclasses include ‘Class3’
        whose superclasses include ‘Class1’
      Use UndecidableSuperClasses to accept this
    • In the class declaration for ‘Class1’

T9739.hs:9:1: error:
    • Superclass cycle for ‘Class3’
        whose superclasses include ‘Class1’
        whose superclasses include ‘Class3’
      Use UndecidableSuperClasses to accept this
    • In the class declaration for ‘Class3’
